# comet

./: Cargo.toml  LICENSE  README.md  build.rs
fonts/: comet-icons.toml
protocol/: Cargo.toml
protocol/src/: client.rs  server.rs
src/: board.rs  chart.rs  icon.rs  main.rs  module.rs  screen.rs  timeline.rs  widget.rs
src/screen/: custom.rs  overview.rs  present.rs  update.rs
src/widget/: animated_text.rs  diffused_text.rs
