[package]
name = "iced_comet"
version = "0.15.0-dev"
edition = "2024"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "Your favorite tool for inspecting and debugging iced applications. Built with iced!"
license = "MIT"
repository = "https://github.com/iced-rs/comet"

[features]
debug = ["iced/debug"]

[dependencies]
iced.version = "0.15.0-dev"
iced.features = ["tokio", "canvas", "svg"]

iced_palace.version = "0.15.0-dev"
iced_palace.features = ["rand"]

iced_beacon = "0.15.0-dev"

chrono = "0.4"
log = "0.4"
num-traits = "0.2"
open = "5.3"
tracing-subscriber = "0.3"

[build-dependencies]
iced_fontello = "0.14"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.rev = "c307bd7321fd04750a9b13f62779d1b7c6e757e2"

iced_core.git = "https://github.com/iced-rs/iced.git"
iced_core.rev = "c307bd7321fd04750a9b13f62779d1b7c6e757e2"

iced_beacon.git = "https://github.com/iced-rs/iced.git"
iced_beacon.rev = "c307bd7321fd04750a9b13f62779d1b7c6e757e2"

iced_widget.git = "https://github.com/iced-rs/iced.git"
iced_widget.rev = "c307bd7321fd04750a9b13f62779d1b7c6e757e2"

iced_palace.git = "https://github.com/hecrj/iced_palace.git"
iced_palace.rev = "4cdf05a7e28792b37b2717d5869de7e3ffc31cdc"

# For development purposes:
# iced.path = "../../iced"
# iced_core.path = "../../iced/core"
# iced_beacon.path = "../../iced/beacon"

[lints.clippy]
large-enum-variant = "allow"
