[package]
name = "iced_comet"
version = "0.15.0-dev"
edition = "2024"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "Your favorite tool for inspecting and debugging iced applications. Built with iced!"
license = "MIT"
repository = "https://github.com/iced-rs/comet"

[features]
debug = ["iced/debug"]

[dependencies]
iced.version = "0.15.0-dev"
iced.features = ["tokio", "canvas", "svg"]

iced_palace.version = "0.15.0-dev"
iced_palace.features = ["rand"]

iced_beacon = "0.15.0-dev"

chrono = "0.4"
log = "0.4"
num-traits = "0.2"
open = "5.3"
tracing-subscriber = "0.3"

[build-dependencies]
iced_fontello = "0.15.0-dev"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.rev = "e46f9c9e69a8d787823c4a64fdcc49c23f303065"

iced_core.git = "https://github.com/iced-rs/iced.git"
iced_core.rev = "e46f9c9e69a8d787823c4a64fdcc49c23f303065"

iced_beacon.git = "https://github.com/iced-rs/iced.git"
iced_beacon.rev = "e46f9c9e69a8d787823c4a64fdcc49c23f303065"

iced_widget.git = "https://github.com/iced-rs/iced.git"
iced_widget.rev = "e46f9c9e69a8d787823c4a64fdcc49c23f303065"

iced_palace.git = "https://github.com/hecrj/iced_palace.git"
iced_palace.rev = "8001f0b8a61f5ee56e864f771cbecf7588ccb787"

iced_fontello.git = "https://github.com/hecrj/iced_fontello.git"
iced_fontello.rev = "2e6d61ee5a869443a249e7ee46a460665ce4969d"

# For development purposes:
# iced.path = "../../iced"
# iced_core.path = "../../iced/core"
# iced_beacon.path = "../../iced/beacon"

[lints.clippy]
large-enum-variant = "allow"
