[package]
name = "iced_inspector_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "net", "sync", "time", "io-util", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.semver]
version = "1"
features = ["serde"]
